# act

./: .gitignore  .gitmodules  QKV-new.py  QKV.py  README.md  pyproject.toml  requirements.yml  test_qkv.py
act/: __init__.py
act/generators/: __init__.py
act/taidl/: __init__.py
asm/: attention.py  attention_new.py  attention_new2.py  attention_new3.py  attention_new4.py
docker/: Dockerfile.amd64  Dockerfile.arm64  build.sh  cleanup.sh  exec.sh  requirements.yml  run.sh
tutorials/asplos26/: README.md  docker.sh  setup.md
tutorials/asplos26/demos/: act-walkthrough.md  jax-integration.md
tutorials/asplos26/exercise1/: README.md
tutorials/asplos26/exercise1/boilerplate/: QKV.py
tutorials/asplos26/exercise1/solution/: QKV.py
tutorials/asplos26/exercise2/: README.md
tutorials/asplos26/exercise2/boilerplate/asm/: softmax.py
tutorials/asplos26/exercise3/: README.md
tutorials/asplos26/exercise3/boilerplate/: attention.hlo  test_qkv.py
tutorials/asplos26/exercise3/solution/: QKV.py
tutorials/asplos26/exercise4/: README.md
tutorials/micro25/: README.md  clean.sh  setup.md
tutorials/micro25/demos/: act-walkthrough.md  jax-integration.md
tutorials/micro25/exercise1/: README.md
tutorials/micro25/exercise1/boilerplate/: QKV.py
tutorials/micro25/exercise1/solution/: QKV.py
tutorials/micro25/exercise2/: README.md
tutorials/micro25/exercise2/boilerplate/: test_qkv.py
tutorials/micro25/exercise2/boilerplate/asm/: attention.py  identity.py  matmul.py
tutorials/micro25/exercise3/: README.md
tutorials/micro25/exercise3/solution/: QKV.py
(+1 files in other folders)
